# influxanalytics

./: README.md
analytics-api/: analysis-output-csv.tar  app.js  container-upload-tests.js  input-csv.tar  input.csv  output.csv  package-lock.json  package.json  query-output-csv.tar  query-output.csv  state-json.tar  state.json  untar.js
analytics-api-rs/: Cargo.toml  influx-integration.yaml  some-test.yaml
analytics-api-rs/examples/: docker_copy_from_example.rs  docker_copy_from_example_with_yaml.rs  list_integrations_example.rs  yaml_example.rs
analytics-api-rs/src/: docker_integrations.rs  integrations.rs  main.rs
analytics-api/docker-util/: index.js
analytics-api/routes/: activities.js  catalog.js  instances.js
analytics-ui/: README.md  angular.json  package-lock.json  package.json
analytics-ui/e2e/src/: app.e2e-spec.ts
analytics-ui/src/app/: activities.service.ts  app-routing.module.ts  app.component.html  app.component.ts  (+5 more)
container-test/: analysis-output-csv.tar  forecast-data-upload.js  input-csv.tar  main-data-query.js  main-data-upload.js  main.js  mock-output.csv  output-csv.tar  query-output-csv.tar  query-output.csv
docker-images/FBProphetMock/: Dockerfile  forecast.sh  influx-analytics-meta.json  next-meta-iteration.json
docker-images/FBProphetP/: Dockerfile
docker-images/FBProphetR/: Dockerfile  influx-analytics-meta.json  script.R
docker-images/MAD-AD/: Dockerfile  detect.js  influx-analytics-meta.json  input.csv  main.js  output.csv  package.json  state.json  train.js
docker-images/test/: Dockerfile  influx-analytics-meta.json
(+22 files in other folders)
