[package]
name = "analytics-api-rs"
version = "0.1.0"
authors = ["Dean Sheehan <dean.sheehan@me.com>"]
edition = "2018"

[dependencies]
shiplift = { git = 'https://github.com/softprops/shiplift.git' }
tar = "0.4.20"
tokio = "0.1.15"
tokio-codec = "0.1.1"
tokio-io = "0.1.11"
serde = "1.0"
serde_yaml = "0.8"
serde_json = "1.0"


